--- a/Sp_phase2/Sp_phase2/Sp_phase2.csproj
+++ b/Sp_phase2/Sp_phase2/Sp_phase2.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Filters\Filter.cs" />
     <Compile Include="Filters\Filters\duplicateRecorcdType1Filter.cs" />
     <Compile Include="Helper\Helper.cs" />
+    <Compile Include="MemoryUnit\Memory.cs" />
     <Compile Include="Readers\FileReader.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
