--- a/Sp_phase2/Sp_phase2/Sp_phase2.csproj
+++ b/Sp_phase2/Sp_phase2/Sp_phase2.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Readers\StringReader.cs" />
     <Compile Include="Records\LineParser.cs" />
     <Compile Include="Records\Record.cs" />
+    <Compile Include="RegistersUnit\RegisterUnit.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
