--- a/Sp_phase2/Sp_phase2/Sp_phase2.csproj
+++ b/Sp_phase2/Sp_phase2/Sp_phase2.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Filters\Filters\duplicateRecorcdType1Filter.cs" />
     <Compile Include="Filters\Filters\MemoryBoundFilter.cs" />
     <Compile Include="Filters\Filters\MissingRecord2Filter.cs" />
+    <Compile Include="Filters\Filters\MissingType1Filter.cs" />
     <Compile Include="GUI\MemoryView.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -88,6 +89,12 @@
       <DependentUpon>RecordsWindow.cs</DependentUpon>
     </Compile>
     <Compile Include="Helper\Helper.cs" />
+    <Compile Include="InstructionsUnit\Decode.cs" />
+    <Compile Include="InstructionsUnit\Fetch.cs" />
+    <Compile Include="InstructionsUnit\InstructionBase.cs" />
+    <Compile Include="InstructionsUnit\InstructionExcuter.cs" />
+    <Compile Include="InstructionsUnit\Instructions\OR.cs" />
+    <Compile Include="InstructionsUnit\InstructionTypes.cs" />
     <Compile Include="MemoryUnit\Memory.cs" />
     <Compile Include="Readers\FileReader.cs" />
     <Compile Include="Program.cs" />
@@ -102,7 +109,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="ClassDiagram1.cd" />
+    <None Include="ClassDiagram2.cd" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="GUI\MemoryView.resx">
