--- a/Sp_phase2/Sp_phase2/Sp_phase2.csproj
+++ b/Sp_phase2/Sp_phase2/Sp_phase2.csproj
@@ -93,6 +93,12 @@
     <Compile Include="InstructionsUnit\Fetch.cs" />
     <Compile Include="InstructionsUnit\InstructionBase.cs" />
     <Compile Include="InstructionsUnit\InstructionExcuter.cs" />
+    <Compile Include="InstructionsUnit\Instructions\AND.cs" />
+    <Compile Include="InstructionsUnit\Instructions\HLT.cs" />
+    <Compile Include="InstructionsUnit\Instructions\LSP.cs" />
+    <Compile Include="InstructionsUnit\Instructions\NOT.cs" />
+    <Compile Include="InstructionsUnit\Instructions\STR.cs" />
+    <Compile Include="InstructionsUnit\Instructions\LD.cs" />
     <Compile Include="InstructionsUnit\Instructions\OR.cs" />
     <Compile Include="InstructionsUnit\InstructionTypes.cs" />
     <Compile Include="MemoryUnit\Memory.cs" />
