code reverse hot fixes, interface updates;
interface now contains list Boxes for items instead of richEdit

--- a/Sp_phase2/Sp_phase2/Sp_phase2.csproj
+++ b/Sp_phase2/Sp_phase2/Sp_phase2.csproj
@@ -88,6 +88,9 @@
     <Compile Include="GUI\RecordsWindow.Designer.cs">
       <DependentUpon>RecordsWindow.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUI\Extends\RecordsWindowManagment.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Helper\Helper.cs" />
     <Compile Include="InstructionsUnit\Decode.cs" />
     <Compile Include="InstructionsUnit\Fetch.cs" />
