--- a/Sp_phase2/Sp_phase2/Sp_phase2.csproj
+++ b/Sp_phase2/Sp_phase2/Sp_phase2.csproj
@@ -70,6 +70,9 @@
     <Compile Include="Filters\Filters\MemoryBoundFilter.cs" />
     <Compile Include="Filters\Filters\MissingRecord2Filter.cs" />
     <Compile Include="Filters\Filters\MissingType1Filter.cs" />
+    <Compile Include="GUI\Extends\RecordsWindowManagment.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="GUI\MemoryView.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -88,9 +91,6 @@
     <Compile Include="GUI\RecordsWindow.Designer.cs">
       <DependentUpon>RecordsWindow.cs</DependentUpon>
     </Compile>
-    <Compile Include="GUI\Extends\RecordsWindowManagment.cs">
-      <SubType>Form</SubType>
-    </Compile>
     <Compile Include="Helper\Helper.cs" />
     <Compile Include="InstructionsUnit\Decode.cs" />
     <Compile Include="InstructionsUnit\Fetch.cs" />
@@ -98,6 +98,19 @@
     <Compile Include="InstructionsUnit\InstructionExcuter.cs" />
     <Compile Include="InstructionsUnit\Instructions\ADD.cs" />
     <Compile Include="InstructionsUnit\Instructions\AND.cs" />
+    <Compile Include="InstructionsUnit\Instructions\ASHR.cs" />
+    <Compile Include="InstructionsUnit\Instructions\BCLR.cs" />
+    <Compile Include="InstructionsUnit\Instructions\BCS.cs" />
+    <Compile Include="InstructionsUnit\Instructions\BEQ.cs" />
+    <Compile Include="InstructionsUnit\Instructions\BLT.cs" />
+    <Compile Include="InstructionsUnit\Instructions\BNE.cs" />
+    <Compile Include="InstructionsUnit\Instructions\BRA.cs" />
+    <Compile Include="InstructionsUnit\Instructions\BSS.cs" />
+    <Compile Include="InstructionsUnit\Instructions\BSUB.cs" />
+    <Compile Include="InstructionsUnit\Instructions\BTST.cs" />
+    <Compile Include="InstructionsUnit\Instructions\CMP.cs" />
+    <Compile Include="InstructionsUnit\Instructions\RCR.cs" />
+    <Compile Include="InstructionsUnit\Instructions\LSHL.cs" />
     <Compile Include="InstructionsUnit\Instructions\EXG.cs" />
     <Compile Include="InstructionsUnit\Instructions\MIN.cs" />
     <Compile Include="InstructionsUnit\Instructions\DIVU.cs" />
@@ -107,6 +120,7 @@
     <Compile Include="InstructionsUnit\Instructions\NOT.cs" />
     <Compile Include="InstructionsUnit\Instructions\POP.cs" />
     <Compile Include="InstructionsUnit\Instructions\PUSH.cs" />
+    <Compile Include="InstructionsUnit\Instructions\RSUB.cs" />
     <Compile Include="InstructionsUnit\Instructions\STR.cs" />
     <Compile Include="InstructionsUnit\Instructions\LD.cs" />
     <Compile Include="InstructionsUnit\Instructions\OR.cs" />
